--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,31 @@
 @import "tailwindcss";
+
+/* Prevent zoom on mobile and improve touch experience */
+* {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+/* Allow text selection for error messages and game results */
+input, textarea, [contenteditable], .text-red-500, .text-green-600, .text-gray-700 {
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+}
+
+/* Improve button touch targets */
+button {
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
+}
+
+/* Prevent viewport zoom */
+html {
+  touch-action: manipulation;
+}
